Complete Website: Refinement Stage

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
   <div id="promo-popup" class="promo-popup-overlay hidden">
     <div class="promo-popup">
       <h2>The fall rush is here, and so are great savings 🍂</h2>
-      <p>Getting in touch is now faster and easier, just use our form below and get fast estimates at no cost!</p>
+      <p>Winter is coming, and we are offering <b>great discounts</b> on fall cleanups and prep.
+        Reach out to us using the form below for a quick quote, or contact us directly. Reach out to us now!</p>
       <div class="button-wrapper">
         <a href="#contact" class="btn-primary">TRY IT NOW</a>
         <button class="close-btn" aria-label="Close popup">Close</button>
@@ -68,7 +69,7 @@
         <img src="images/AeroLogo.webp" alt="Aero Home Logo" />
       </div>
       <div class="text-container">
-        <h1>LETHBRIDGE'S<span class="highlight-keyword"> HOME SERVICE </span> COMPANY</h1>
+        <h1>TRUSTED HANDS, <span class="highlight-keyword">BETTER HOMES</span></h1>
         <div class="hero-button">
           <a href="#contact" class="btn-primary">Get A Free Quote</a>
         </div>
@@ -88,7 +89,8 @@
 
     <h2 class="services-subtitle">Click to Learn More</h2>
 
-    <h2 class="services-category-1">OUTDOOR SERVICES</h2>
+    <!--FOR LAUNCH NEXT SUMMER-->
+    <h2 class="services-category-1">OUTDOOR SERVICES - ENDING SOON</h2>
     <div class="services-row-one">
       <a href="/service-pages/landscape-page.html" class="service-card">
         <p class="service-description">LANDSCAPING</p>
@@ -105,7 +107,7 @@
     <h2 class="services-category-2">INDOOR SERVICES</h2>
     <div class="services-row-two">
       <a href="/service-pages/walls-page.html" class="service-card">
-        <p class="service-description">WALLS & PAINTING</p>
+        <p class="service-description">DRYWALL & PAINTING</p>
         <img src="images/job3.webp" alt="Job 3" class="service-image" />
         <span class="learn-more">LEARN MORE</span>
       </a>
@@ -119,7 +121,7 @@
     <h2 class="services-category-3">OTHER SERVICES</h2>
     <div class="services-row-three">
       <a href="/service-pages/handy-page.html" class="service-card">
-        <p class="service-description">HANDY WORK</p>
+        <p class="service-description">HANDY SERVICES</p>
         <img src="images/job5.webp" alt="Job 5" class="service-image" />
         <span class="learn-more">LEARN MORE</span>
       </a>
@@ -156,9 +158,9 @@
       </div>
     </div>
     <div class="pricing-row-3">
-      <div class="pricing-card" id="faucet-fix-card">
+      <div class="pricing-card" id="leak-fix-card">
         <h1 class="pricing-icon"><i class="fa-solid fa-faucet-drip"></i></h1>
-        <h2 class="pricing-title">Faucet Address</h2>
+        <h2 class="pricing-title">Leak Address</h2>
       </div>
       <div class="pricing-card" id="recovery-drywall-card">
         <h1 class="pricing-icon"><i class="fa-solid fa-water"></i></h1>
