--- a/service-pages/walls-page.html
+++ b/service-pages/walls-page.html
@@ -53,7 +53,7 @@
   <header class="hero" style="background-image: url('/images/walls-page-hero.webp');">
     <div class="hero-content">
       <div class="text-container">
-        <h1><span class="highlight-keyword">WALLS & PAINT</span></h1>
+        <h1><span class="highlight-keyword">DRYWALL & PAINT</span></h1>
         <div class="hero-button">
           <a href="#contact" class="btn-primary">Get A Free Quote</a>
         </div>
@@ -84,15 +84,15 @@
       </div>
 
       <div class="showcase-row-2">
+        <div class="showcase-image">
+          <img src="/service-pages/showcase-pages-images/walls-row2.webp" alt="Showcase Image 2">
+        </div>
         <div class="showcase-text">
           <h3>DRYWALL FIX & INSTALL</h3>
           <p>
             For patching holes, flood recovery or general drywalling, our team knows the ins and outs for a smooth
             finish.
           </p>
-        </div>
-        <div class="showcase-image">
-          <img src="/service-pages/showcase-pages-images/walls-row2.webp" alt="Showcase Image 2">
         </div>
       </div>
 
@@ -115,11 +115,11 @@
     <h1 class="faq-section-title"><i class="fa-solid fa-minus"></i> FREQUENTLY ASKED <span
         class="highlight-keyword">QUESTIONS</span> <i class="fa-solid fa-minus"></i></h1>
 
-    <details class="faq-card-1">
-      <summary class="faq-label-1">
+    <details class="faq-card">
+      <summary class="faq-label">
         <i class="fas fa-arrow-right-long"></i>How long does drywall mudding and finishing take?
       </summary>
-      <div class="faq-content-1">
+      <div class="faq-content">
         <p>
           A: Drywall finishing usually takes 2–4 days, depending on the number of coats, drying time, and humidity.
           Each layer of mud must dry completely before sanding and applying the next coat to ensure a smooth, durable
@@ -128,11 +128,11 @@
       </div>
     </details>
 
-    <details class="faq-card-2">
-      <summary class="faq-label-2">
+    <details class="faq-card">
+      <summary class="faq-label">
         <i class="fas fa-arrow-right-long"></i>Is drywall dust dangerous?
       </summary>
-      <div class="faq-content-2">
+      <div class="faq-content">
         <p>
           A: Drywall dust isn’t toxic, but it can irritate your eyes and lungs if not handled properly. We minimize
           dust by using proper containment, vacuums, and clean-up systems so your home stays safe and tidy throughout
@@ -141,11 +141,11 @@
       </div>
     </details>
 
-    <details class="faq-card-3">
-      <summary class="faq-label-3">
+    <details class="faq-card">
+      <summary class="faq-label">
         <i class="fas fa-arrow-right-long"></i>What painting services do you offer?
       </summary>
-      <div class="faq-content-3">
+      <div class="faq-content">
         <p>
           A: We provide interior and exterior painting for homes, garages, fences, and commercial spaces.
           Our services include surface prep, priming, painting, touch-ups, and finish coatings using top-quality
@@ -154,11 +154,11 @@
       </div>
     </details>
 
-    <details class="faq-card-4">
-      <summary class="faq-label-4">
+    <details class="faq-card">
+      <summary class="faq-label">
         <i class="fas fa-arrow-right-long"></i>Can you fix wall imperfections before painting?
       </summary>
-      <div class="faq-content-4">
+      <div class="faq-content">
         <p>
           A: Yes — every paint job includes basic wall prep such as filling small holes, sanding rough spots, and
           priming repaired areas. If you have larger cracks or damage, we can do drywall repair before painting to
@@ -167,11 +167,11 @@
       </div>
     </details>
 
-    <details class="faq-card-5">
-      <summary class="faq-label-5">
+    <details class="faq-card">
+      <summary class="faq-label">
         <i class="fas fa-arrow-right-long"></i>Can you repair damaged drywall instead of replacing it?
       </summary>
-      <div class="faq-content-5">
+      <div class="faq-content">
         <p>
           A: Yes — in most cases, we can repair damaged drywall rather than replacing entire sections. Whether it’s
           holes from wall anchors, cracks from settling, or moisture damage, we cut out the affected area, patch it
@@ -182,11 +182,11 @@
       </div>
     </details>
 
-    <details class="faq-card-6">
-      <summary class="faq-label-6">
+    <details class="faq-card">
+      <summary class="faq-label">
         <i class="fas fa-arrow-right-long"></i>Do you help with color selection?
       </summary>
-      <div class="faq-content-6">
+      <div class="faq-content">
         <p>
           A: Yes — choosing the right color can be overwhelming, so we’re happy to help. We can suggest shades that
           complement your lighting, flooring, and décor, or even provide sample swatches so you can see how colors
@@ -200,9 +200,9 @@
 
   <!-- Contact Section -->
   <section id="contact" class="contact">
-    <form action="https://formsubmit.co/aerohomerenovations@gmail.com" method="POST">
-      <h3>Get A Quote Online</h3>
-      <p class="contact-subtitle">No obligations - it's free!</p>
+    <form id="contact-form" action="https://formsubmit.co/aerohomerenovations@gmail.com" method="POST">
+      <h3 id="contact-form-title">Get A Quote Online</h3>
+      <p id="contact-form-subtitle" class="contact-subtitle">No obligations - it's free!</p>
 
       <input type="text" name="name" placeholder="Your Name" required />
       <input type="email" name="email" placeholder="Your Email" required />
@@ -224,21 +224,24 @@
       <input type="hidden" name="_subject" value="New Quote Request from aerohome.ca" />
       <input type="hidden" name="_next" value="https://aerohome.ca/thank-pages/quote-thank.html" />
 
-      <button type="submit">Send Message</button>
+      <button id="contact-submit-btn" type="submit">Send Message</button>
     </form>
 
-    <h2><i class="fa-solid fa-minus"></i> CONTACT<span class="highlight-keyword"> US</span> <i
-        class="fa-solid fa-minus"></i></h2>
+    <h2 id="contact-section-title">
+      <i class="fa-solid fa-minus"></i> CONTACT
+      <span class="highlight-keyword"> US</span>
+      <i class="fa-solid fa-minus"></i>
+    </h2>
 
     <div class="contact-info-row">
-      <a class="contact-box" href="tel:4036356840">
-        <h4><i class="fas fa-phone"></i></h4>
-        <p>(403) 635 6840</p>
+      <a class="contact-box" id="contact-box" href="tel:4036356840">
+        <h4 id="contact-title"><i class="fas fa-phone"></i></h4>
+        <p id="contact-text">(403) 635 6840</p>
       </a>
 
-      <a class="contact-box" href="mailto:aerohomerenovations@gmail.com">
-        <h4><i class="fas fa-envelope"></i></h4>
-        <p>aerohomerenovations@gmail.com</p>
+      <a class="contact-box" id="contact-box" href="mailto:aerohomerenovations@gmail.com">
+        <h4 id="contact-title"><i class="fas fa-envelope"></i></h4>
+        <p id="contact-text">aerohomerenovations@gmail.com</p>
       </a>
     </div>
   </section>
@@ -261,3 +264,5 @@
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="script.js"></script>
 </body>
+
+</html>
