--- a/index.html
+++ b/index.html
@@ -191,6 +191,31 @@
       </p>
     </div>
 
+    <!-- Trust Section -->
+    <section class="trust-section">
+      <h1 class="trust-title">Breathe Easy, We're:</h1>
+      <div class="trust-container">
+        <div class="trust-card">
+          <div class="trust-header">
+            <i class="fas fa-shield-alt"></i>
+          </div>
+          <h3 class="trust-card-title">Legally Registered</h3>
+        </div>
+        <div class="trust-card">
+          <div class="trust-header">
+            <i class="fas fa-certificate"></i>
+          </div>
+          <h3 class="trust-card-title">Licensed</h3>
+        </div>
+        <div class="trust-card">
+          <div class="trust-header">
+            <i class="fas fa-handshake"></i>
+          </div>
+          <h3 class="trust-card-title">Fully Insured</h3>
+        </div>
+      </div>
+    </section>
+
     <!-- Feature Squares -->
     <div class="mission-features">
       <div class="feature-card color1">
@@ -221,21 +246,21 @@
     <h1 class="gallery-title"><i class="fa-solid fa-minus"></i> OUR GALLERY <i class="fa-solid fa-minus"></i></h1>
     <div class="photo-gallery">
       <div class="gallery-track">
-        <img src="galleryimages/photo1.webp" alt="Gallery Photo 1" />
-        <img src="galleryimages/photo2.webp" alt="Gallery Photo 2" />
-        <img src="galleryimages/photo3.webp" alt="Gallery Photo 3" />
-        <img src="galleryimages/photo4.webp" alt="Gallery Photo 4" />
-        <img src="galleryimages/photo5.webp" alt="Gallery Photo 5" />
-        <img src="galleryimages/photo6.webp" alt="Gallery Photo 6" />
-        <img src="galleryimages/photo7.webp" alt="Gallery Photo 7" />
-        <img src="galleryimages/photo8.webp" alt="Gallery Photo 8" />
-        <img src="galleryimages/photo9.webp" alt="Gallery Photo 9" />
-        <img src="galleryimages/photo10.webp" alt="Gallery Photo 10" />
-        <img src="galleryimages/photo11.webp" alt="Gallery Photo 11" />
-        <img src="galleryimages/photo12.webp" alt="Gallery Photo 12" />
-        <img src="galleryimages/photo13.webp" alt="Gallery Photo 13" />
-        <img src="galleryimages/photo14.webp" alt="Gallery Photo 14" />
-        <img src="galleryimages/photo15.webp" alt="Gallery Photo 15" />
+        <img data-src="galleryimages/photo1.webp" alt="Gallery Photo 1" class="lazy-load" />
+        <img data-src="galleryimages/photo2.webp" alt="Gallery Photo 2" class="lazy-load" />
+        <img data-src="galleryimages/photo3.webp" alt="Gallery Photo 3" class="lazy-load" />
+        <img data-src="galleryimages/photo4.webp" alt="Gallery Photo 4" class="lazy-load" />
+        <img data-src="galleryimages/photo5.webp" alt="Gallery Photo 5" class="lazy-load" />
+        <img data-src="galleryimages/photo6.webp" alt="Gallery Photo 6" class="lazy-load" />
+        <img data-src="galleryimages/photo7.webp" alt="Gallery Photo 7" class="lazy-load" />
+        <img data-src="galleryimages/photo8.webp" alt="Gallery Photo 8" class="lazy-load" />
+        <img data-src="galleryimages/photo9.webp" alt="Gallery Photo 9" class="lazy-load" />
+        <img data-src="galleryimages/photo10.webp" alt="Gallery Photo 10" class="lazy-load" />
+        <img data-src="galleryimages/photo11.webp" alt="Gallery Photo 11" class="lazy-load" />
+        <img data-src="galleryimages/photo12.webp" alt="Gallery Photo 12" class="lazy-load" />
+        <img data-src="galleryimages/photo13.webp" alt="Gallery Photo 13" class="lazy-load" />
+        <img data-src="galleryimages/photo14.webp" alt="Gallery Photo 14" class="lazy-load" />
+        <img data-src="galleryimages/photo15.webp" alt="Gallery Photo 15" class="lazy-load" />
       </div>
     </div>
   </section>
