--- a/special-pages/about-us.html
+++ b/special-pages/about-us.html
@@ -101,6 +101,31 @@
                 <h2>Your Satisfaction Is Guaranteed</h2>
             </div>
         </div>
+
+        <!-- Trust Section -->
+        <section class="trust-section">
+            <h1 class="trust-title">Breathe Easy, We're:</h1>
+            <div class="trust-container">
+                <div class="trust-card">
+                    <div class="trust-header">
+                        <i class="fas fa-shield-alt"></i>
+                    </div>
+                    <h3 class="trust-card-title">Legally Registered</h3>
+                </div>
+                <div class="trust-card">
+                    <div class="trust-header">
+                        <i class="fas fa-certificate"></i>
+                    </div>
+                    <h3 class="trust-card-title">Licensed</h3>
+                </div>
+                <div class="trust-card">
+                    <div class="trust-header">
+                        <i class="fas fa-handshake"></i>
+                    </div>
+                    <h3 class="trust-card-title">Fully Insured</h3>
+                </div>
+            </div>
+        </section>
     </section>
 
 
