Updated Site (Final Version)

--- a/index.html
+++ b/index.html
@@ -90,42 +90,56 @@
     <h2 class="services-subtitle">Click to Learn More</h2>
 
     <!--FOR LAUNCH NEXT SUMMER-->
-    <h2 class="services-category-1">OUTDOOR SERVICES - ENDING SOON</h2>
-    <div class="services-row-one">
-      <a href="/service-pages/landscape-page.html" class="service-card">
-        <p class="service-description">LANDSCAPING</p>
-        <img src="images/job1.webp" alt="Job 1" class="service-image" />
-        <span class="learn-more">LEARN MORE</span>
-      </a>
-      <a href="/service-pages/yard-page.html" class="service-card">
-        <p class="service-description">YARD MAINTENANCE</p>
-        <img src="images/job2.webp" alt="Job 2" class="service-image" />
-        <span class="learn-more">LEARN MORE</span>
-      </a>
-    </div>
+    <section class="services" id="services">
+      <h2 class="services-category-1">OUTDOOR SERVICES - ENDING SOON</h2>
+      <div class="services-row-one">
+        <a href="/service-pages/landscape-page.html" class="service-card">
+          <img src="images/job1.webp" alt="Landscaping job" class="service-image" />
+          <p class="service-description">LANDSCAPING</p>
+          <p class="service-details">
+            Professional garden design, lawn care, and outdoor transformations.
+          </p>
+        </a>
 
-    <h2 class="services-category-2">INDOOR SERVICES</h2>
-    <div class="services-row-two">
-      <a href="/service-pages/walls-page.html" class="service-card">
-        <p class="service-description">DRYWALL & PAINTING</p>
-        <img src="images/job3.webp" alt="Job 3" class="service-image" />
-        <span class="learn-more">LEARN MORE</span>
-      </a>
-      <a href="/service-pages/flooring-page.html" class="service-card">
-        <p class="service-description">FLOORING & INSTALLATIONS</p>
-        <img src="images/job4.webp" alt="Job 4" class="service-image" />
-        <span class="learn-more">LEARN MORE</span>
-      </a>
-    </div>
+        <a href="/service-pages/yard-page.html" class="service-card">
+          <img src="images/job2.webp" alt="Yard maintenance" class="service-image" />
+          <p class="service-description">YARD MAINTENANCE</p>
+          <p class="service-details">
+            Regular mowing, trimming, and seasonal cleanup to keep your yard pristine.
+          </p>
+        </a>
+      </div>
 
-    <h2 class="services-category-3">OTHER SERVICES</h2>
-    <div class="services-row-three">
-      <a href="/service-pages/handy-page.html" class="service-card">
-        <p class="service-description">HANDY SERVICES</p>
-        <img src="images/job5.webp" alt="Job 5" class="service-image" />
-        <span class="learn-more">LEARN MORE</span>
-      </a>
-    </div>
+      <h2 class="services-category-2">INDOOR SERVICES</h2>
+      <div class="services-row-two">
+        <a href="/service-pages/walls-page.html" class="service-card">
+          <img src="images/job3.webp" alt="Drywall and painting" class="service-image" />
+          <p class="service-description">DRYWALL &amp; PAINTING</p>
+          <p class="service-details">
+            Smooth finishes and perfect color work for any interior space.
+          </p>
+        </a>
+
+        <a href="/service-pages/flooring-page.html" class="service-card">
+          <img src="images/job4.webp" alt="Flooring installation" class="service-image" />
+          <p class="service-description">FLOORING &amp; INSTALLATIONS</p>
+          <p class="service-details">
+            Durable and stylish floors professionally installed with precision.
+          </p>
+        </a>
+      </div>
+
+      <h2 class="services-category-3">OTHER SERVICES</h2>
+      <div class="services-row-three">
+        <a href="/service-pages/handy-page.html" class="service-card">
+          <img src="images/job5.webp" alt="Handy services" class="service-image" />
+          <p class="service-description">HANDY SERVICES</p>
+          <p class="service-details">
+            Small repairs, mounting, and fixes done right the first time.
+          </p>
+        </a>
+      </div>
+    </section>
 
     <h1 class="pricing-category">POPULAR <span class="highlight-keyword">SERVICES</span></h1>
 
@@ -197,7 +211,7 @@
       <div class="trust-container">
         <div class="trust-card">
           <div class="trust-header">
-            <i class="fas fa-shield-alt"></i>
+            <i class="fa-solid fa-user-check"></i>
           </div>
           <h3 class="trust-card-title">Legally Registered</h3>
         </div>
@@ -209,7 +223,7 @@
         </div>
         <div class="trust-card">
           <div class="trust-header">
-            <i class="fas fa-handshake"></i>
+            <i class="fas fa-shield-alt"></i>
           </div>
           <h3 class="trust-card-title">Fully Insured</h3>
         </div>
@@ -328,7 +342,6 @@
   </footer>
 
   <!-- Scripts -->
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="script.js"></script>
 </body>
 
