--- a/special-pages/pay-methods.html
+++ b/special-pages/pay-methods.html
@@ -33,6 +33,10 @@
             <a href="/index.html">BACK TO MAIN SITE</a>
         </div>
     </div>
+
+    <!-- Scripts -->
+    <script src="script.js"></script>
+
 </body>
 
 </html>
