Removed Trust Section

--- a/index.html
+++ b/index.html
@@ -89,34 +89,15 @@
 
     <h2 class="services-subtitle">Click to Learn More</h2>
 
-    <!--FOR LAUNCH NEXT SUMMER-->
     <section class="services" id="services">
-      <h2 class="services-category-1">OUTDOOR SERVICES - ENDING SOON</h2>
-      <div class="services-row-one">
-        <a href="/service-pages/landscape-page.html" class="service-card">
-          <img src="images/job1.webp" alt="Landscaping job" class="service-image" />
-          <p class="service-description">LANDSCAPING</p>
-          <p class="service-details">
-            Professional garden design, lawn care, and outdoor transformations.
-          </p>
-        </a>
-
-        <a href="/service-pages/yard-page.html" class="service-card">
-          <img src="images/job2.webp" alt="Yard maintenance" class="service-image" />
-          <p class="service-description">YARD MAINTENANCE</p>
-          <p class="service-details">
-            Regular mowing, trimming, and seasonal cleanup to keep your yard pristine.
-          </p>
-        </a>
-      </div>
-
       <h2 class="services-category-2">INDOOR SERVICES</h2>
       <div class="services-row-two">
         <a href="/service-pages/walls-page.html" class="service-card">
           <img src="images/job3.webp" alt="Drywall and painting" class="service-image" />
           <p class="service-description">DRYWALL &amp; PAINTING</p>
           <p class="service-details">
-            Smooth finishes and perfect color work for any interior space.
+            Professional <b>drywall</b> installation for flood recovery, renewal or replacement, including patching & repair. 
+            Smooth <b>paint</b> finish with perfect color for any outdoor/indoor space.
           </p>
         </a>
 
@@ -124,7 +105,27 @@
           <img src="images/job4.webp" alt="Flooring installation" class="service-image" />
           <p class="service-description">FLOORING &amp; INSTALLATIONS</p>
           <p class="service-details">
-            Durable and stylish floors professionally installed with precision.
+            Durable and stylish <b>floors</b> professionally installed with precision, by professionals.
+            Timely <b>installations</b> of fixtures, lights, and holiday accessories quickly and efficiently.
+          </p>
+        </a>
+      </div>
+
+      <h2 class="services-category-1">OUTDOOR SERVICES</h2>
+      <div class="services-row-one">
+        <a href="/service-pages/landscape-page.html" class="service-card">
+          <img src="images/job1.webp" alt="Landscaping job" class="service-image" />
+          <p class="service-description">LANDSCAPING</p>
+          <p class="service-details">
+            Professional <b>garden</b> design, gravel, sod, and path installations. Outdoor transformations with style.
+          </p>
+        </a>
+
+        <a href="/service-pages/yard-page.html" class="service-card">
+          <img src="images/job2.webp" alt="Yard maintenance" class="service-image" />
+          <p class="service-description">YARD MAINTENANCE</p>
+          <p class="service-details">
+            Regular <b>lawn</b> services, including mowing, trimming, and seasonal cleanups to keep your yard pristine year-round.
           </p>
         </a>
       </div>
@@ -135,7 +136,8 @@
           <img src="images/job5.webp" alt="Handy services" class="service-image" />
           <p class="service-description">HANDY SERVICES</p>
           <p class="service-details">
-            Small repairs, mounting, and fixes done right the first time.
+            Small <b>handy rapairs</b>, mounting, and fixes done right the first time. Installation of new equipment,
+            addressing leaks and expert opinion are also available.
           </p>
         </a>
       </div>
@@ -205,7 +207,7 @@
       </p>
     </div>
 
-    <!-- Trust Section -->
+    <!-- Trust Section (Not yet to launch)
     <section class="trust-section">
       <h1 class="trust-title">Breathe Easy, We're:</h1>
       <div class="trust-container">
@@ -228,7 +230,7 @@
           <h3 class="trust-card-title">Fully Insured</h3>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Feature Squares -->
     <div class="mission-features">
