Removed Trust Section from about us page

--- a/special-pages/about-us.html
+++ b/special-pages/about-us.html
@@ -102,7 +102,7 @@
             </div>
         </div>
 
-        <!-- Trust Section -->
+        <!-- Trust Section (Not yet to Launch)
         <section class="trust-section">
             <h1 class="trust-title">Breathe Easy, We're:</h1>
             <div class="trust-container">
@@ -126,7 +126,7 @@
                 </div>
             </div>
         </section>
-    </section>
+    </section> -->
 
 
     <!-- Showcase Section -->
